# dutch-data-plugin

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  SCAFFOLDING_REPORT.json  package-lock.json  package.json  pyproject.toml
.claude-plugin/: plugin.json
.gemini/extensions/dutch-data/: gemini-extension.json
.github/: CODEOWNERS
companies/nl-ez/: charter.json  manifest.json
skills/docx/: SKILL.md
skills/dutch-gov-data/: SKILL.md
skills/pdf/: SKILL.md
skills/pptx/: SKILL.md
skills/pptx-hd/: SKILL.md  html2pptx-hd.md
skills/pptx-hd/scripts/: build-branded-hd.js
skills/pptx/references/: design-guide.md
skills/pptx/scripts/: build-branded.js
